[package]
name = "nested-comment-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plex = "0.2.5"
lalrpop-util = "0.19.6"
regex = "1"
thiserror = "1.0"
anyhow = "1.0"

[build-dependencies]
lalrpop = "0.19.6"